docs: updated token

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Update Records with `Responses` and `Suggestions`\n",
+    "# Add `Responses` and `Suggestions` to `FeedbackDataset` \n",
     "\n",
     "In this part of the end-to-end tutorial series, we will see how we can update the records of our dataset with the responses and suggestions. You can refer to previous tutorials for [creating the dataset](./create-dataset-001.ipynb), [configuring the users and workspaces](./configure-users-and-workspaces-000.ipynb) or [adding metadata](./add-metadata-003.ipynb). Feel free to check out the [practical guides](../../../../practical_guides/practical_guides.md) page for more in-depth information.\n",
     "\n",
@@ -134,6 +134,7 @@
    "metadata": {},
    "source": [
     "### Enable Telemetry\n",
+    "\n",
     "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the Telemetry page.\n",
     "\n",
     "```python\n",
