docs: added updated to end2end training

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Your Model with ArgillaTrainer\n",
+    "# Train a Model with `ArgillaTrainer`\n",
     "\n",
     "In this part of our end-to-end series, we will be training our model with ArgillaTrainer. You can refer to previous tutorials such as [creating the dataset](./create-dataset-001.ipynb) or [adding responses and suggestions](./add-suggestions-and-responses-005.ipynb). Feel free to check out the [practical guides](../../../../practical_guides/practical_guides.md) page for more in-depth information.\n",
     "\n",
@@ -100,7 +100,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Argilla credentials\n",
@@ -261,7 +265,25 @@
     "    framework=\"spacy\",\n",
     "    train_size=0.8,\n",
     "    model=\"en_core_web_sm\",\n",
-    ")\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us customize the training process a bit more with the `update_config` method. We specify a model we want to use from HuggingFace. We also specify the number of epochs and the learning rate. You can have a look at the comprehensive list of [training configs](../../../../practical_guides/fine_tune.md#training-configs) for more customization options."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.update_config(\n",
+    "    max_steps=1\n",
+    ")"
    ]
   },
   {
@@ -355,7 +377,7 @@
    "source": [
     "trainer.update_config(\n",
     "    model_name_or_path=\"Elron/bleurt-tiny-512\",\n",
-    "    num_train_epochs=1,\n",
+    "    num_iterations=1,\n",
     "    learning_rate=5e-5,\n",
     "    logging_dir=\"./logs\",\n",
     ")"
