chore: review notebook validator

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
@@ -322,7 +322,8 @@
    "source": [
     "# Argilla credentials\n",
     "api_url = \"http://localhost:6900\" # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
-    "api_key = DEFAULT_API_KEY # admin.apikey"
+    "api_key = DEFAULT_API_KEY # admin.apikey\n",
+    "hf_token = None # not used in this tutorial"
    ]
   },
   {
