--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.push_to_huggingface(\"bert_model_with_ag_news\", generate_card=True)"
+    "trainer.push_to_huggingface(\"argilla/end2end_agnews\", generate_card=True)"
    ]
   },
   {
@@ -450,6 +450,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "name": "python"
   }
