--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -668,7 +668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we learned how to filter and query our records. We delved into the specifics of filtering based on field content, metadata attributes, and various statuses. Additionally, we explored methods to order our records, whether by the most recent updates or by any metadata characteristic. Finally, we saw how to use the semantic search feature in Python SDK. In the future, we will also provide this features por suggestions and responses."
+    "In this tutorial, we learned how to filter and query our records. We delved into the specifics of filtering based on field content, metadata attributes, and various statuses. Additionally, we explored methods to order our records, whether by the most recent updates or by any metadata characteristic. Finally, we saw how to use the semantic search feature in Python SDK. In the future, we will also provide this features por suggestions and responses in Python SDK."
    ]
   }
  ],
