add reference to suggestions and responses

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -33,6 +33,7 @@
     "2. [Filter](#Filter)\n",
     "    1. [By Fields Content](#By-Fields-Content)\n",
     "    2. [By Metadata Property](#By-Metadata-Property)\n",
+    "    3. [By Suggestions and Responses](#By-Suggestions-and-Responses)\n",
     "3. [Sort](#Sort)\n",
     "4. [Semantic Search](#Semantic-Search)\n",
     "5. [Conclusion](#Conclusion)"
@@ -475,6 +476,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### By Suggestions and Responses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Within the UI filters, you can filter records according to the value of responses given by **the current user**. The type of the questions should be `LabelQuestion`, `MultiLabelQuestion` or `RatingQuestion`. If you prefer to filter records based on suggestions it is possible to gilter by suggestion score, value and agent. The option in Python SDK will be available soon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sort"
    ]
   },
@@ -668,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we learned how to filter and query our records. We delved into the specifics of filtering based on field content, metadata attributes, and various statuses. Additionally, we explored methods to order our records, whether by the most recent updates or by any metadata characteristic. Finally, we saw how to use the semantic search feature in Python SDK. In the future, we will also provide this features por suggestions and responses in Python SDK."
+    "In this tutorial, we learned how to filter and query our records. We delved into the specifics of filtering based on field content, metadata attributes, various statuses and suggestions and responses. Additionally, we explored methods to order our records, whether by the most recent updates or by any metadata characteristic. Finally, we saw how to use the semantic search feature."
    ]
   }
  ],
