--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Filter and Query Records\n",
     "\n",
-    " This tutorial is part of a series in which we will get to know the `FeedbackDataset`. n this step, we will show how to filter and query our records, a process that can be really useful for efficiently analyzing data, extracting relevant information, managing data size, and enabling focused insights for informed decision-making. You can have a look at the previous tutorials to add [metadata](./add-metadata-003.ipynb), [vectors](./add-vectors-004.ipynb) and [suggestions and responses](./add-suggestions-and-responses-005.ipynb). Feel free to check out the [practical guides](../../../../practical_guides/practical_guides.md) page for more in-depth information."
+    " This tutorial is part of a series in which we will get to know the `FeedbackDataset`. In this step, we will show how to filter and query our records, a process that can be really useful for efficiently analyzing data, extracting relevant information, managing data size, and enabling focused insights for informed decision-making. You can have a look at the previous tutorials to add [metadata](./add-metadata-003.ipynb), [vectors](./add-vectors-004.ipynb) and [suggestions and responses](./add-suggestions-and-responses-005.ipynb). Feel free to check out the [practical guides](../../../../practical_guides/practical_guides.md) page for more in-depth information."
    ]
   },
   {
