docs: updated end2end to running examples

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
@@ -79,14 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import argilla as rg\n",
     "from datasets import load_dataset\n",
     "from transformers import pipeline\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from argilla._constants import DEFAULT_API_KEY"
    ]
   },
   {
@@ -159,11 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davidberenstein/Documents/programming/argilla/argilla/src/argilla/client/client.py:154: UserWarning: Default user was detected and no workspace configuration was provided, so the default 'argilla' workspace will be used. If you want to setup another workspace, use the `rg.set_workspace` function or provide a different one on `rg.init`\n",
+      "  warnings.warn(\n",
+      "/Users/davidberenstein/Documents/programming/argilla/argilla/src/argilla/client/client.py:182: UserWarning: You're connecting to Argilla Server 1.19.0 using a different client version (1.21.0-dev).\n",
+      "This may lead to potential compatibility issues during your experience.\n",
+      "To ensure a seamless and optimized connection, we highly recommend aligning your client version with the server version.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = rg.FeedbackDataset.from_argilla(\"end2end_textclassification\")"
+    "dataset_remote = rg.FeedbackDataset.from_argilla(\"end2end_textclassification\")"
    ]
   },
   {
@@ -206,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +229,9 @@
        "{'text': \"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\"}"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -239,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,11 +320,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Updating records in Argilla... <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺━━</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 93%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:01</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Updating records in Argilla... \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m\u001b[38;5;237m━━\u001b[0m \u001b[35m 93%\u001b[0m \u001b[36m0:00:01\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "modified_records = [record for record in dataset.records]\n",
+    "modified_records = [record for record in dataset_remote.records]\n",
     "\n",
     "for index, record in enumerate(modified_records):\n",
     "    record.responses = [\n",
@@ -324,7 +376,7 @@
     "        }\n",
     "    ]\n",
     "\n",
-    "dataset.update_records(modified_records)"
+    "dataset_remote.update_records(modified_records)"
    ]
   },
   {
@@ -394,6 +446,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "modified_records = [record for record in dataset_remote.records]\n",
+    "\n",
     "for record in modified_records:\n",
     "    record.suggestions = [\n",
     "        {\n",
@@ -403,7 +457,7 @@
     "        }\n",
     "    ]\n",
     "\n",
-    "dataset.update_records(modified_records)"
+    "dataset_remote.update_records(modified_records)"
    ]
   },
   {
@@ -432,6 +486,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    remote_dataset = rg.FeedbackDataset.from_argilla(\"end2end_textclassification_with_suggestions_and_responses\")\n",
+    "    remote_dataset.delete()\n",
+    "except Exception:\n",
+    "    pass\n",
     "remote_dataset = dataset.push_to_argilla(\"end2end_textclassification_with_suggestions_and_responses\")"
    ]
   },
@@ -486,7 +545,7 @@
    "outputs": [],
    "source": [
     "#papermill_description=push-dataset-to-huggingface\n",
-    "dataset.push_to_huggingface(name=\"argilla/end2end_textclassification_with_suggestions_and_responses\", generate_card=True)"
+    "dataset.push_to_huggingface(\"argilla/end2end_textclassification_with_suggestions_and_responses\", generate_card=True)"
    ]
   },
   {
@@ -515,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
