--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-vectors-004.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-vectors-004.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = rg.FeedbackDataset.from_argilla(\"end2end_textclassification\")"
+    "dataset_remote = rg.FeedbackDataset.from_argilla(\"end2end_textclassification\")"
    ]
   },
   {
@@ -288,7 +288,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.add_vector_settings(vector_settings)"
+    "dataset.add_vector_settings(vector_settings)\n",
+    "dataset_remote.add_vector_settings(vector_settings)"
    ]
   },
   {
@@ -380,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modified_records = [record for record in dataset.records]\n",
+    "modified_records = [record for record in dataset_remote.records]\n",
     "texts = [record.fields[\"text\"] for record in modified_records]\n",
     "embeddings = model.encode(texts)\n",
     "\n",
@@ -476,7 +477,7 @@
     "\n",
     "text_vector = model.encode(text).tolist()\n",
     "\n",
-    "similar_records = dataset.find_similar_records(\n",
+    "similar_records = dataset_remote.find_similar_records(\n",
     "    vector_name=\"sentence_embedding\",\n",
     "    value=text_vector,\n",
     "    max_results=5\n",
@@ -529,6 +530,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    remote_dataset = rg.FeedbackDataset.from_argilla(\"end2end_textclassification_with_vectors\")\n",
+    "    remote_dataset.delete()\n",
+    "except:\n",
+    "    pass\n",
     "remote_dataset = dataset.push_to_argilla(\"end2end_textclassification_with_vectors\")"
    ]
   },
@@ -584,7 +590,7 @@
    "outputs": [],
    "source": [
     "#papermill_description=push-dataset-to-huggingface\n",
-    "dataset.push_to_huggingface(name=\"argilla/end2end_textclassification_with_vectors\", generate_card=True)"
+    "dataset.push_to_huggingface(\"argilla/end2end_textclassification_with_vectors\", generate_card=True)"
    ]
   },
   {
