--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
@@ -403,7 +403,11 @@
     "    )\n",
     "    assigned_records = next(iter(assignments[group].values()))\n",
     "    dataset.add_records(assigned_records)\n",
-    "    remote_dataset = dataset.push_to_argilla(name=\"text_classification\", workspace=group)"
+    "    try:\n",
+    "        remote_dataset = dataset.from_argilla(name=\"text_classification\", workspace=group)\n",
+    "        remote_dataset.delete()\n",
+    "    except Exception:\n",
+    "        remote_dataset = dataset.push_to_argilla(name=\"text_classification\", workspace=group)"
    ]
   },
   {
@@ -454,7 +458,11 @@
     "        )\n",
     "        assigned_records = users[user]\n",
     "        dataset.add_records(assigned_records)\n",
-    "        remote_dataset = dataset.push_to_argilla(name=\"text_classification\", workspace=user)"
+    "        try:\n",
+    "            remote_dataset = dataset.from_argilla(name=\"text_classification\", workspace=user)\n",
+    "            remote_dataset.delete()\n",
+    "        except Exception:\n",
+    "            remote_dataset = dataset.push_to_argilla(name=\"text_classification\", workspace=user)"
    ]
   },
   {
@@ -625,7 +633,11 @@
     "        guidelines=\"Classify the articles into one of the four categories.\",\n",
     "    )\n",
     "    dataset.add_records(records)\n",
-    "    remote_dataset = dataset.push_to_argilla(name=\"text-classification\", workspace=username)"
+    "    try:\n",
+    "        remote_dataset = dataset.from_argilla(name=\"text-classification\", workspace=username)\n",
+    "        remote_dataset.delete()\n",
+    "    except Exception: \n",
+    "        remote_dataset = dataset.push_to_argilla(name=\"text-classification\", workspace=username)"
    ]
   },
   {
