--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "51b3b93c",
    "metadata": {
     "papermill": {
@@ -563,11 +563,14 @@
    },
    "outputs": [],
    "source": [
-    "user = rg.User.create(\n",
-    "    username=\"admin\",\n",
-    "    password=api_key,\n",
-    "    role=\"admin\",\n",
-    ")\n",
+    "try:\n",
+    "    user = rg.User.from_name(\"admin\")\n",
+    "except Exception:\n",
+    "    user = rg.User.create(\n",
+    "        username=\"admin\",\n",
+    "        password=api_key,\n",
+    "        role=\"admin\",\n",
+    "    )\n",
     "user"
    ]
   },
