--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset-001.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset-001.ipynb
@@ -899,6 +899,12 @@
             "outputs": [],
             "source": [
                 "#papermill_description=push-dataset-to-argilla\n",
+                "try:\n",
+                "    # delete old dataset\n",
+                "    remote_dataset = feedback_dataset.from_argilla(name=\"end2end_textclassification\", workspace=\"argilla\")\n",
+                "    remote_dataset.delete()\n",
+                "except:\n",
+                "    pass\n",
                 "remote_dataset = feedback_dataset.push_to_argilla(name=\"end2end_textclassification\", workspace=\"argilla\")"
             ]
         },
