--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -106,7 +106,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Argilla credentials\n",
@@ -152,7 +156,7 @@
    "source": [
     "## Pull the Dataset\n",
     "\n",
-    "As we uploaded the dataset we created in the [previous tutorial](#previous_tutorial) to both Argilla and HuggingFace Hub, we can pull the dataset from either of them. Let us see how we can pull the dataset from both.\n",
+    "As we uploaded the dataset we created in the [previous tutorial](#previous_tutorial) to both Argilla and HuggingFace Hub, we can pull the dataset from either of them, however, we only allow filtering and querying on `RemoteFeedbackDataset`, hence we will only pull the dataset from Argilla.\n",
     "\n",
     "### From Argilla\n",
     "\n",
@@ -165,7 +169,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = rg.FeedbackDataset.from_argilla(\"end2end_textclassification_with_metadata_vectors_suggestions_and_responses\")"
+    "dataset_remote_with_metadata = rg.FeedbackDataset.from_argilla(\"end2end_textclassification_with_metadata\")\n",
+    "dataset_remote_with_vectors = rg.FeedbackDataset.from_argilla(\"end2end_textclassification_with_vectors\")\n",
+    "dataset_remote_with_suggestions_and_responses = rg.FeedbackDataset.from_argilla(\"end2end_textclassification_with_suggestions_and_responses\")"
    ]
   },
   {
@@ -174,16 +180,7 @@
    "source": [
     "### From HuggingFace Hub\n",
     "\n",
-    "We can also pull the dataset from HuggingFace Hub. Similarly, we can use the `from_huggingface` method to pull the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = rg.FeedbackDataset.from_huggingface(\"argilla/end2end_textclassification_with_metadata_vectors_suggestions_and_responses\")"
+    "Not all sorting and filtering is supported with a local `FeedbackDataset`, pulled from HuggingFace Hub. Hence, we will only pull the dataset from Argilla."
    ]
   },
   {
@@ -197,13 +194,6 @@
     "The dataset pulled from HuggingFace Hub is an instance of `FeedbackDataset` whereas the dataset pulled from Argilla is an instance of `RemoteFeedbackDataset`. The difference between the two is that the former is a local one and the changes made on it stay locally. On the other hand, the latter is a remote one and the changes made on it are directly reflected on the dataset on the Argilla server, which can make your process faster.\n",
     "\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us briefly examine what our dataset looks like."
    ]
   },
   {
@@ -222,9 +212,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dataset[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -321,7 +309,7 @@
     }
    ],
    "source": [
-    "filtered_records = dataset.filter_by(\n",
+    "filtered_records = dataset_remote_with_metadata.filter_by(\n",
     "    metadata_filters=[\n",
     "        rg.TermsMetadataFilter(\n",
     "            name=\"group\",\n",
@@ -400,7 +388,7 @@
     }
    ],
    "source": [
-    "filtered_dataset = dataset.filter_by(response_status=[\"submitted\"])\n",
+    "filtered_dataset = dataset_remote_with_metadata.filter_by(response_status=[\"submitted\"])\n",
     "print('Submitted records:', len(filtered_dataset))"
    ]
   },
@@ -425,7 +413,7 @@
     }
    ],
    "source": [
-    "filtered_dataset = dataset.filter_by(response_status=[\"missing\", \"draft\"])\n",
+    "filtered_dataset = dataset_remote_with_metadata.filter_by(response_status=[\"missing\", \"draft\"])\n",
     "print('Pending records:', len(filtered_dataset))"
    ]
   },
@@ -450,7 +438,7 @@
     }
    ],
    "source": [
-    "filtered_dataset = dataset.filter_by(\n",
+    "filtered_dataset = dataset_remote_with_metadata.filter_by(\n",
     "    metadata_filters=[\n",
     "        rg.TermsMetadataFilter(\n",
     "            name=\"group\",\n",
@@ -515,7 +503,7 @@
    "source": [
     "from argilla import SortBy\n",
     "\n",
-    "sorted_records = dataset.sort_by(\n",
+    "sorted_records = dataset_remote_with_suggestions_and_responses.sort_by(\n",
     "    [\n",
     "        SortBy(field=\"updated_at\", order=\"desc\"),\n",
     "        SortBy(field=\"metadata.group\", order=\"asc\")\n",
@@ -536,22 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_dataset = dataset.filter_by(\n",
-    "    metadata_filters=[\n",
-    "        rg.TermsMetadataFilter(\n",
-    "            name=\"group\",\n",
-    "            values=[\"group-1\", \"group-2\"]\n",
-    "        ),\n",
-    "        rg.IntegerMetadataFilter(\n",
-    "            name=\"length\",\n",
-    "            le=282\n",
-    "        ),\n",
-    "        rg.FloatMetadataFilter(\n",
-    "            name=\"length_std\",\n",
-    "            ge=204, \n",
-    "            le=290\n",
-    "        ),\n",
-    "    ],\n",
+    "filtered_dataset = dataset_remote_with_suggestions_and_responses.filter_by(\n",
     "    response_status=[\"discarded\"]\n",
     ").sort_by(\n",
     "    [\n",
@@ -639,7 +612,7 @@
     "\n",
     "text_vector = model.encode(text).tolist()\n",
     "\n",
-    "similar_records = dataset.find_similar_records(\n",
+    "similar_records = dataset_remote_with_vectors.find_similar_records(\n",
     "    vector_name=\"sentence_embedding\",\n",
     "    value=text_vector,\n",
     "    max_results=5\n",
