--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
@@ -87,7 +87,8 @@
    "source": [
     "import argilla as rg\n",
     "from argilla.feedback import FeedbackDataset, TrainingTask, ArgillaTrainer\n",
-    "from datasets import load_dataset"
+    "from datasets import load_dataset\n",
+    "from argilla._constants import DEFAULT_API_KEY"
    ]
   },
   {
