docs: updated tutorials and images

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "Utilizing metadata properties is an effective means of enriching your dataset, enabling [effective filtering and sorting](./filter-and-query-008.ipynb). They are the pieces of information for each record that are accessible both in the UI and via SDK. Argilla provides various types of metadata properties, allowing you to tailor their use based on the requirements of your specific project. \n",
     "\n",
-    "![workflow](../../../../_static/tutorials/end2end/base/workflow_metadata.png)"
+    "![workflow](../../../../_static/tutorials/end2end/base/workflow_metadata.svg)"
    ]
   },
   {
