--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In Argilla, `responses` are the answers that the annotators give to the questions that we ask them. If we have a dataset that has been annotated already, we can add these gold responses to our dataset as responses. This comes in handy in that we will not have to annotate the dataset again. On the other hand, `suggestions` are the model predictions that we show to our annotators in the UI during the annotation process. This way, the annotation process will become much faster and easier for the annotators. \n",
     "\n",
-    "![workflow](../../../../_static/tutorials/end2end/base/workflow_suggestions_and_responses.png)"
+    "![workflow](../../../../_static/tutorials/end2end/base/workflow_suggestions_and_responses.svg)"
    ]
   },
   {
