--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. In this step, we will show how to configure `Users` and `Workspaces`. If you need additional context, consult [user management](../../../../getting_started/installation/configurations/user_management.md) and [workspace management](../../../../getting_started/installation/configurations/workspace_management.md).\n",
     "\n",
-    "![workflow](../../../../_static/tutorials/end2end/base/workflow_users_and_workspaces.png)"
+    "![workflow](../../../../_static/tutorials/end2end/base/workflow_users_and_workspaces.svg)"
    ]
   },
   {
