--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset-001.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset-001.ipynb
@@ -18,7 +18,7 @@
                 "\n",
                 "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.html). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our practical guide on creating a dataset](../../../../practical_guides/create_dataset.md).\n",
                 "\n",
-                "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.png)\n",
+                "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.svg)\n",
                 "\n",
                 "We will start by creating a basic dataset using the [ag_news](https://huggingface.co/datasets/ag_news) dataset as an example and push it to `Argilla` and the Hugging Face `hub`."
             ]
