--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![workflow](../../../../_static/tutorials/end2end/base/workflow_train_models.png)"
+    "![workflow](../../../../_static/tutorials/end2end/base/workflow_train_models.svg)"
    ]
   },
   {
@@ -377,7 +377,7 @@
    "outputs": [],
    "source": [
     "trainer.update_config(\n",
-    "    model_name_or_path=\"Elron/bleurt-tiny-512\",\n",
+    "    model_name_or_path=\"prajjwal1/bert-tiny\",\n",
     "    num_iterations=1,\n",
     "    learning_rate=5e-5,\n",
     "    logging_dir=\"./logs\",\n",
