docs: updated message used

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -603,7 +603,7 @@
    "source": [
     "text = \"Baseball: Smoltz sizzles as Braves force deciding game HOUSTON, United States : JD Drew singled to drive in a run in the top of the ninth inning and lift the Atlanta Braves to a 6-5 win over Houston and force the Astros into a fifth and deciding game.\"\n",
     "\n",
-    "model = SentenceTransformer(\"paraphrase-MiniLM-L6-v2\")\n",
+    "model = SentenceTransformer(\"TaylorAI/bge-micro\")\n",
     "\n",
     "text_vector = model.encode(text).tolist()\n",
     "\n",
