docs: added reference to dataset docs: changed to spacy training instead of trf

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -553,7 +553,7 @@
    "source": [
     "similar_records = dataset_remote_with_vectors.find_similar_records(\n",
     "    vector_name=\"sentence_embedding\",\n",
-    "    record=dataset[0],\n",
+    "    record=dataset_remote_with_vectors[0],\n",
     "    max_results=5\n",
     ")"
    ]
