--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this example, we can use the `transformers` framework."
+    "For this example, we can use the `spacy` framework."
    ]
   },
   {
@@ -358,7 +358,7 @@
     "trainer = ArgillaTrainer(\n",
     "    dataset=dataset,\n",
     "    task=task,\n",
-    "    framework=\"transformers\",\n",
+    "    framework=\"spacy\",\n",
     "    train_size=0.8,\n",
     ")"
    ]
@@ -377,10 +377,7 @@
    "outputs": [],
    "source": [
     "trainer.update_config(\n",
-    "    model_name_or_path=\"prajjwal1/bert-tiny\",\n",
-    "    num_iterations=1,\n",
-    "    learning_rate=5e-5,\n",
-    "    logging_dir=\"./logs\",\n",
+    "    max_steps=1\n",
     ")"
    ]
   },
@@ -397,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train(output_dir=\"textcat_model_transformers\")"
+    "trainer.train(output_dir=\"textcat_model_spacy\")"
    ]
   },
   {
