docs: push with local model instead

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/train-model-006.ipynb
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.push_to_huggingface(\"argilla/end2end_agnews\", generate_card=True)"
+    "trainer.push_to_huggingface(\"textcat_model_spacy\", generate_card=True)"
    ]
   },
   {
