--- a/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
@@ -126,7 +126,7 @@
     "from argilla.utils.telemetry import tutorial_running\n",
     "\n",
     "tutorial_running()\n",
-    "```",
+    "```\n",
     "If you're running a private Hugging Face Space, you will also need to set the [HF_TOKEN](https://huggingface.co/settings/tokens) as follows:"
    ]
   },
@@ -143,7 +143,7 @@
     "# # Replace api_url with the url to your HF Spaces URL\n",
     "# # Replace api_key if you configured a custom API key\n",
     "# rg.init(\n",
-    "#     api_url=\"https://hf-space.hf.space\", \n",
+    "#     api_url=\"https://[your-owner-name]-[your_space_name].hf.space\", \n",
     "#     api_key=\"admin.apikey\",\n",
     "#     extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"},\n",
     "# )"
