--- a/docs/_source/tutorials/notebooks/labelling-textclassification-sentencetransformers-semantic.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-sentencetransformers-semantic.ipynb
@@ -144,7 +144,7 @@
         "# # Replace api_url with the url to your HF Spaces URL\n",
         "# # Replace api_key if you configured a custom API key\n",
         "# rg.init(\n",
-        "#     api_url=\"https://hf-space.hf.space\", \n",
+        "#     api_url=\"https://[your-owner-name]-[your_space_name].hf.space\", \n",
         "#     api_key=\"admin.apikey\",\n",
         "#     extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"},\n",
         "# )"
