--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-flair-fewshot.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-flair-fewshot.ipynb
@@ -162,7 +162,7 @@
     "# # Replace api_key if you configured a custom API key\n",
     "# # Replace workspace with the name of your workspace\n",
     "# rg.init(\n",
-    "#     api_url=\"https://hf-space.hf.space\", \n",
+    "#     api_url=\"https://[your-owner-name]-[your_space_name].hf.space\", \n",
     "#     api_key=\"admin.apikey\",\n",
     "#     workspace=\"admin\",\n",
     "#     extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"},\n",
