--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_text_classification_semantic_search.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_text_classification_semantic_search.ipynb
@@ -185,7 +185,7 @@
     "# # Replace api_key if you configured a custom API key\n",
     "# # Replace workspace with the name of your workspace\n",
     "# rg.init(\n",
-    "#     api_url=\"https://hf-space.hf.space\", \n",
+    "#     api_url=\"https://[your-owner-name]-[your_space_name].hf.space\", \n",
     "#     api_key=\"owner.apikey\",\n",
     "#     workspace=\"admin\",\n",
     "#     extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"},\n",
