--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
@@ -118,15 +118,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Enable Telemetry\n",
-    "\n",
-    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../../reference/telemetry.md) page.\n",
-    "\n",
-    "```python\n",
-    "from argilla.utils.telemetry import tutorial_running\n",
-    "\n",
-    "tutorial_running()\n",
-    "```",
     "If you're running a private Hugging Face Space, you will also need to set the [HF_TOKEN](https://huggingface.co/settings/tokens) as follows:"
    ]
   },
@@ -144,11 +135,26 @@
     "# # Replace api_key if you configured a custom API key\n",
     "# # Replace workspace with the name of your workspace\n",
     "# rg.init(\n",
-    "#     api_url=\"https://hf-space.hf.space\", \n",
+    "#     api_url=\"https://[your-owner-name]-[your_space_name].hf.space\", \n",
     "#     api_key=\"owner.apikey\",\n",
     "#     workspace=\"admin\",\n",
     "#     extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"},\n",
     "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enable Telemetry\n",
+    "\n",
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../../reference/telemetry.md) page.\n",
+    "\n",
+    "```python\n",
+    "from argilla.utils.telemetry import tutorial_running\n",
+    "\n",
+    "tutorial_running()\n",
+    "```"
    ]
   },
   {
