include global checkbox and page size dropdown

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -54,5 +54,6 @@
   "reset": "Reset",
   "with": "with",
   "find": "Find",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "records-per-page": "Records per page"
 }
